--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -1,3 +1,5 @@
+/* Cabeçalho */
+
 .menu {
     display: flex;
     justify-content: space-evenly;
@@ -6,10 +8,76 @@
     column-gap: 33px;
 }
 
+/*Categoria */
+
+.categorias__lista {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem; /*8px*/
+}
+
+/* Destaques */
+
+.destaques {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.destaques__barra {
+    flex-grow: 1;
+}
+
+/* Eventos */
+
+.eventos__lista {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5rem;
+    row-gap: 1rem;
+    justify-content: center;
+}
+
+.eventos__item {
+    flex-grow: 1;
+    max-width: 400px;
+}
+
+.agenda__lista {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5rem;
+    row-gap: 1rem;
+    justify-content: center;
+}
+
+.agenda__item {
+    flex-grow: 1;
+    max-width: 400px;
+}
+
 @media (min-width: 720px) {
+
+    /*Cabeçalho*/
 
     .menu{
         column-gap: 75px;
+    }
+
+    /*Categoria*/
+
+    .categorias__lista {
+        flex-wrap: wrap;
+        column-gap: 1.5rem;
+        row-gap: 1rem;
+    }
+
+    .eventos__lista {
+        justify-content: end;
+    }
+
+    .agenda__lista {
+        justify-content: end;
     }
 
 }
