--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -33,14 +33,77 @@
     grid-area: 2 / 2 / 4 / 3;
 }
 
+.eventos__item {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    grid-template-rows: auto repeat(2, 1fr) auto;
+    grid-template-areas:
+        "imagem imagem"
+        "nome nome"
+        "data data"
+        "local botao"
+    ;
+}
+
+.eventos__item img {
+    grid-area: imagem;
+}
+
+.eventos__item h3 {
+    grid-area: nome;
+}
+
+.eventos__item h4 {
+    grid-area: data;
+}
+
+.eventos__item h5 {
+    grid-area: local;
+}
+
+.eventos__item button {
+    grid-area: botao;
+}
+
+.agenda__item {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto 1fr;
+    grid-template-areas:
+        "imagem imagem"
+        "data atracao"
+    ;
+}
+
+.agenda__item img {
+    grid-area: imagem;
+}
+
+.agenda__item .agenda__informacoes {
+    grid-area: data;
+}
+
+.agenda__item .agenda__atracao {
+    grid-area: atracao;
+}
+
+
+
+
 @media (min-width: 720px) {
 
+    .banner {
+        grid-template-columns: calc(50% - 0.75rem) auto auto;
+        column-gap: 1.5rem;
+    }
+
     .banner img:nth-child(1) {
-        grid-area: 1 / 1 / 3 / 3;
+        grid-area: 1 / 1 / 3 / 2;
     }
     
     .banner img:nth-child(4) {
-        grid-area: 1 / 4 / 3 / 5;
+        grid-area: 1 / 3 / 3 / 4;
     }
 }
 
