Projeto Culturama finalizado

--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -56,6 +56,20 @@
     max-width: 400px;
 }
 
+/*Rodapé*/
+
+.rodape {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 25px;
+}
+
+.rodape__logo {
+    align-self: flex-end;
+}
+
+
 @media (min-width: 720px) {
 
     /*Cabeçalho*/
