--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -36,7 +36,6 @@
 .eventos__item {
     display: grid;
     grid-template-columns: 1fr auto;
-    align-items: center;
     grid-template-rows: auto repeat(2, 1fr) auto;
     grid-template-areas:
         "imagem imagem"
@@ -52,6 +51,7 @@
 
 .eventos__item h3 {
     grid-area: nome;
+    align-self: center;
 }
 
 .eventos__item h4 {
@@ -60,6 +60,7 @@
 
 .eventos__item h5 {
     grid-area: local;
+    align-self: end;
 }
 
 .eventos__item button {
@@ -88,9 +89,6 @@
     grid-area: atracao;
 }
 
-
-
-
 @media (min-width: 720px) {
 
     .banner {
@@ -105,14 +103,33 @@
     .banner img:nth-child(4) {
         grid-area: 1 / 3 / 3 / 4;
     }
+
+    @media (min-width: 1440px) {
+
+        .categorias {
+            display: grid;
+            grid-template-columns: calc(50% - 0.75rem);
+            grid-template-rows: auto 1fr auto;
+            grid-template-areas:
+            'titulo titulo'
+            'lista destaques'
+            'lista imagem';
+            column-gap: 1.5rem;
+            row-gap: 1rem;
+        }
+
+        .categorias__titulo {
+            grid-area: titulo;
+            grid-column: 1/3;
+        } 
+        .categorias__lista {
+            grid-area: lista;
+        }	
+        .categorias__destaques {
+            grid-area: destaques;
+        }
+        .categorias__imagem {
+            grid-area: imagem;
+        }
+    }
 }
-
-@media (min-width: 1440) {
-    
-    .categorias{
-        display: grid;
-        
-    }   
-
-}
-
